# rust-macro-examples

./: Cargo.toml  README.md
app/: Cargo.toml
attribute/log_duration/: Cargo.toml
attribute/log_duration/src/: lib.rs  parser.rs
attribute/memoize/: Cargo.toml
attribute/memoize/src/: lib.rs  parser.rs
derive/custom_model/: Cargo.toml
derive/custom_model/src/: custom_model.rs  lib.rs  parser.rs
derive/describe/: Cargo.toml
derive/describe/src/: lib.rs  parser.rs
derive/init_string_hash_map/: Cargo.toml
derive/init_string_hash_map/src/: lib.rs  parser.rs
function/constant_string/: Cargo.toml
function/constant_string/src/: lib.rs  parser.rs
function/hash_mapify/: Cargo.toml
function/hash_mapify/src/: lib.rs  parser.rs
function/manager_of_thing/: Cargo.toml
function/manager_of_thing/src/: lib.rs  parser.rs
macro-utils/: Cargo.toml
macro-utils/src/: lib.rs  type_ext.rs
