[workspace]
members = [
  "app", "attribute/log_duration", "attribute/memoize",
  "derive/*", "function/constant_string", "function/hash_mapify", "function/manager_of_thing", "macro-utils",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
