[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
init_string_hash_map = { path = "../derive/init_string_hash_map" }
custom_model = { path = "../derive/custom_model" }
log_duration = { path = "../attribute/log_duration" }
memoize = { path = "../attribute/memoize" }
constant_string = { path = "../function/constant_string" }
hash_mapify = { path = "../function/hash_mapify" }
manager_of_thing = { path = "../function/manager_of_thing" }
describe = { path = "../derive/describe" }
